<resources>
    <string name="app_name">MovieLister</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="movies_or_series">Movies or Series</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="director">Director\:</string>
    <string name="writers">Writers\:</string>
    <string name="stars">Stars\:</string>
    <string name="creators">Creators\:</string>
    <string name="hello">Hello,</string>
    <string name="movie">Movie</string>
    <string name="person">Person</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="movies_fragment">Movies Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="login_fragment">Login Fragment</string>
</resources>